Add favicon and final tidy ups for the user experience

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     />
 
     <link rel="stylesheet" href="assets/css/style.css" />
-    <title>Document</title>
+    <title>Love Maths</title>
+    <link rel="icon" href="assets/images/favicon.ico" sizes="16x16.png" />
   </head>
   <body>
     <h1 class="heading">
